# CMakeForMultipleDirs

./: CMakeLists.txt  Hierarchy.txt  LICENSE  README.md  main.cpp
Folder1/: CMakeLists.txt  header1.h  source1.cpp
Folder2/: CMakeLists.txt  header2.h  source2.cpp
